--- a/accueil/templates/index.html
+++ b/accueil/templates/index.html
@@ -400,7 +400,7 @@
 <section class="img bg-image">
    <div class="container">
       <div class="row slider-text px-4 d-flex align-items-center justify-content-center">
-         <div class=" text w-100 page-accueil">
+         <div class=" text w-100 page-accueil mt-lg-5">
             <h2 class="text-warning titre-accueil animated fadeInLeft">Accès rapide aux tickets de transports partout
                aux Comores</h2>
             <div id="" class="no-uicustom barre mb-3 animated fadeInUp"></div>
@@ -414,27 +414,26 @@
                         arrivées</p>
                      <p class="mb-5 animated fadeInLeft">Pour les voyages inter-îles, seuls les transports maritimes ou
                         aériens sont possibles</p>
-                     <a href="#informations-supplementaire" class="btn btn-outline-info py-3 px-5">Informations
-                        supplémentaires <i class="ion-ios-arrow-round-forward"></i> <i
+                     <a href="#informations-supplementaire" class="btn btn-outline-warning px-lg-5 py-lg-3">Lire plus <i class="ion-ios-arrow-round-forward"></i> <i
                            class="ion-ios-arrow-round-forward"></i></a>
                   </div>
                   <!-- <h4 class="text-primary text-choix-accueil animated fadeInUp">Choisir votre moyen de transport souhaité</h4> -->
                   <!-- <div id="" class="no-uicustom barre mb-3 animated fadeInUp"></div> -->
                   <div class="row animated fadeInUp">
                      <div class="col-md-4 col-sm-4 col-lg-4 col-4">
-                        <h4 class="text-info">Déplacement inter-villes</h4>
-                        <a href="" type="button" class="btn btn-warning py-3 btn-formulaire-achat" data-toggle="modal"
+                        <h4 class="text-info description-bouton">Déplacement inter-villes</h4>
+                        <a href="" type="button" class="btn btn-warning px-lg-5 py-lg-2" data-toggle="modal"
                            data-target="#bus">Bus</a>
                      </div>
                      <div class="col-md-8 col-sm-8 col-lg-8 col-8">
-                        <h4 class="text-center text-info">Déplacement inter-îles</h4>
+                        <h4 class="text-center text-info description-bouton">Déplacement inter-îles</h4>
                         <div class="d-flex justify-content-between">
                            <div class="">
-                              <a href="" type="bytton" class="btn btn-primary py-3 btn-formulaire-achat"
+                              <a href="" type="bytton" class="btn btn-primary px-lg-5 py-lg-2"
                                  data-toggle="modal" data-target="#avion">Avion </a>
                            </div>
                            <div class="">
-                              <a href="" type="button" class="btn btn-info py-3 btn-formulaire-achat"
+                              <a href="" type="button" class="btn btn-info px-lg-5 py-lg-2"
                                  data-toggle="modal" data-target="#bateau">Bateau</a>
                            </div>
                         </div>
@@ -608,39 +607,43 @@
    <div class="row">
       <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 ">
          <form action="" method="post" class="formulaire-contact">
-            <div class="form-group mb-3">
-               <input type="text" class="form-control" placeholder=" " required>
-               <label for="">Votre nom complet (nom et prénom): </label>
-            </div>
-            <div class="form-group mb-3">
-               <input type="text" class="form-control" placeholder=" " required>
-               <label for="">Adresse électronique</label>
-            </div>
-            <div class="form-group mb-3">
-               <input type="text" class="form-control" placeholder=" " required>
-               <label for="">Numéro de téléphone actif</label>
-            </div>
-            <div class="form-group mb-3">
-               <input type="text" class="form-control" placeholder=" " required>
-               <label for="">Lieu de résidence</label>
-            </div>
-            <div class="form-group mb-3">
-               <input type="text" class="form-control" placeholder=" " required>
-               <label for="">Titre du message</label>
-            </div>
-            <div class="form-group">
-               <textarea name="" class="form-control" placeholder=" " id=""></textarea>
-               <label for="" class="label-form">Votre message bien détaillé</label>
+            <div class="row">
+               <div class="col-6">
+                  <div class="form-group mb-3">
+                     <label for="">Votre nom complet: </label>
+                     <input type="text" class="form-control" placeholder=" " required>
+                  </div>
+               </div>
+               <div class="col-6">
+                  <div class="form-group mb-3">
+                     <label for="">Adresse électronique</label>
+                     <input type="text" class="form-control" placeholder=" " required>
+                  </div>
+               </div>
+               <div class="col-6">
+                  <div class="form-group mb-3">
+                     <label for="">Numéro de téléphone actif</label>
+                     <input type="text" class="form-control" placeholder=" " required>
+                  </div>
+               </div>
+               <div class="col-6">
+                  <div class="form-group mb-3">
+                     <label for="">Titre du message</label>
+                     <input type="text" class="form-control" placeholder=" " required>
+                  </div>
+               </div>
+               <div class="col-12">
+                  <div class="form-group">
+                     <label for="" class="label-form">Votre message bien détaillé</label>
+                     <textarea name="" class="form-control" placeholder=" " id=""></textarea>
+                  </div>
+               </div>
             </div>
          </form>
       </div>
       <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5">
-         <div class="col-md-12 heading-title">
-            <h4>Notre siège principal</h4>
-            <div id="" class="no-uicustom barre mb-5"></div>
-         </div>
          <address class="adresse">
-            <i class="ion-ios-search"></i> Bandracouni Anjouan (Comores) <br>
+            Bandracouni Anjouan (Comores) <br>
             Téléphoen : (+269) 3000000 | (+269) 4000000 <br>
             E-mail : missafara-rahissi@rahissi.com
          </address>
