--- a/static/css/main.css
+++ b/static/css/main.css
@@ -78,7 +78,7 @@ html {
   color: #f8f3d4;
   font-size: 0.9em;
   position: relative;
-  width: 18em;
+  width: 15em;
 }
 
 #sidebar h2 {
@@ -91,11 +91,11 @@ html {
   width: 20em;
 }
 
-#sidebar>.inner>* {
+/* #sidebar>.inner>* {
   border-bottom: solid 2px rgba(210, 215, 217, 0.75);
   margin: 0 0 3.5em 0;
   padding: 0 0 3.5em 0;
-}
+} */
 
 #sidebar>.inner>*> :last-child {
   margin-bottom: 0;
