Traitement du formulaire d'abonnement

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Block des titres -->
-    <title> {% block title %}C-Transports{% endblock %} </title>
+    <title> {% block title %}C-Transport{% endblock %} </title>
 
     <!-- Pour l'inclusion des fichiers de styles particuliers -->
     {% block styles %}
