Traitement du formulaire d'abonnement

--- a/accueil/templates/index.html
+++ b/accueil/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 
-{% block title %}C-Transports | accueil{% endblock %}
+{% block title %}C-Transport | accueil{% endblock %}
 
 
 {% block header %}
@@ -417,8 +417,6 @@
                      <a href="#informations-supplementaire" class="btn btn-outline-warning px-lg-5 py-lg-3">Lire plus <i class="ion-ios-arrow-round-forward"></i> <i
                            class="ion-ios-arrow-round-forward"></i></a>
                   </div>
-                  <!-- <h4 class="text-primary text-choix-accueil animated fadeInUp">Choisir votre moyen de transport souhaité</h4> -->
-                  <!-- <div id="" class="no-uicustom barre mb-3 animated fadeInUp"></div> -->
                   <div class="row animated fadeInUp">
                      <div class="col-md-4 col-sm-4 col-lg-4 col-4">
                         <h4 class="text-info description-bouton">Déplacement inter-villes</h4>
