Traitement du formulaire d'abonnement

--- a/achat/templates/ticket.html
+++ b/achat/templates/ticket.html
@@ -24,11 +24,12 @@
 
 {% block body %}
 
-<div class="container my-5">
-    <div class="alert alert-success">
-        <b>Merci d'avoir privilégié notre service pour l'achat de votre ticket de transport </b> <br>
-        <p>Vous pouvez signaler sur <a href="">cette page</a> en cas de remarque, ou si vous avez des suggestions
-            particuliers <br> vous serez alerté pour tout nouvau de votre voyages 👌 </p>
+<div class="container">
+    <div class="alert alert-info">
+        <b class="text-white mb-2">Merci d'avoir privilégié notre service pour l'achat de votre ticket de transport </b> <br>
+        <p>Pour toutes vos questions, merci de nous les poser sur <a href="">cette page</a> ou si vous avez des suggestions
+            particuliers pour notre service <br> on vous tient au courant 👌 </p>
+        <h4 class="text-warning titre">Merci et excellent voyage à vous ! </h4>
     </div>
     <div class="row">
         <div class="col-md-5">
