--- a/utilisateur/templates/information.html
+++ b/utilisateur/templates/information.html
@@ -14,7 +14,7 @@
                 {% if request.GET.msg == None %}
                     <div class="alert alert-warning pb-1">
                         <div class="d-flex">
-                            <h5 class="text-white py-1">Votre code d'abonnement que vous avez indiqué n'est pas valide</h5>
+                            <h5 class="text-white py-1">Le code d'abonnement que vous avez indiqué n'est pas valide, merci de le vérifier si vous en possédez</h5>
                         </div>
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true"><i class="ion-ios-close"></i></span>
