--- a/achat/templates/ticket.html
+++ b/achat/templates/ticket.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% load qr_code %}
-
+{% load i18n %}
 
 {% block header %}
 
@@ -46,5 +46,4 @@
 
     
 </div>
-
 {% endblock body %}
